--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "mempool-mentor",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npm run test:contracts",
+    "test:contracts": "hardhat test",
+    "deploy:coston2": "hardhat run scripts/deploy/deployGasGuard.js --network coston2",
+    "deploy:flare": "hardhat run scripts/deploy/deployGasGuard.js --network flare"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -65,6 +69,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
@@ -75,6 +80,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "hardhat": "^2.19.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
