--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "preview": "vite preview",
     "test": "npm run test:contracts",
     "test:contracts": "hardhat test",
-    "deploy:coston2": "hardhat run scripts/deploy/deployGasGuard.js --network coston2",
-    "deploy:flare": "hardhat run scripts/deploy/deployGasGuard.js --network flare"
+    "deploy:coston2": "hardhat --config hardhat.config.cjs run scripts/deploy/deployGasGuard.cjs --network coston2",
+    "deploy:flare": "hardhat --config hardhat.config.cjs run scripts/deploy/deployGasGuard.cjs --network flare"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -44,11 +44,13 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "ethers": "^6.9.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -61,8 +63,6 @@
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
-    "ethers": "^6.9.0",
-    "axios": "^1.6.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
@@ -76,6 +76,7 @@
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.3",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
